# Experiments_2024_autumn

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  delegates.h  editorodf.h  error_model.cpp  error_model.h  errors_to_variable.h  graph_model.h  graph_settings_model.cpp  graph_settings_model.h  lineplot.ui  manager.cc  manager.h  measurement_model.cpp  measurement_model.h  measurements.h  plots.h  scatterplot.ui  titles_model.cpp  titles_model.h  variable_data.h
lib/data/: error_data.h  manager.cc  manager.h  measurement_model.cpp  measurement_model.h  titles_model.cpp  titles_model.h  variable_data.h
lib/plots/: abstract_plot.h  graph_line_settings_model.cpp  graph_line_settings_model.h  graph_one_axis_settings_model.cpp  graph_one_axis_settings_model.h  graph_settings_model.cpp  graph_settings_model.h  graph_two_axes_settings_model..h  heatmap2d.cpp  heatmap2d.h  heatmap2d.ui  heatmap2d_settings_model.cpp  heatmap2d_settings_model.h  lineplot.ui  one_axis_plot.ui  one_axis_settings_model.cpp  one_axis_settings_model.h  plots.h  sorted_line_plot.cpp  sorted_line_plot.h  sorted_line_plot_settings_model.cpp  sorted_line_plot_settings_model.h  sorted_lines_plot.ui  two_axes_plot.ui  two_axes_settings_model.cpp  two_axes_settings_model.h  unsorted_line_plot.cpp  unsorted_line_plot.h  unsorted_line_plot_settings_model.cpp  unsorted_line_plot_settings_model.h  unsorted_lines_plot.ui
main/: CMakeLists.txt  dialogWindow.ui  dialog_ask_number.h  dialog_ask_number.ui  dialogamountrowswindow.h  dialogamountrowswindow.ui  dialogwindow.cpp  dialogwindow.h  dialogwindow.ui  mainwindow.cc  mainwindow.h  mainwindow.ui  (+2 more)
